--- a/intel.html
+++ b/intel.html
@@ -6,7 +6,7 @@
 
 <head>
 
-<title>Intel</title>
+<title>Challenges of the Semiconductor Supply Chain</title>
 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 
@@ -30,7 +30,7 @@
 
 
 <div id="container">
-<div id="header"><img src="Intel-Logo.png" height="131" width="200" align="left" alt="ASML"/><h1 style="position:relative; top:30px">Intel</h1></div>
+<div id="header"><img src="Intel-Logo.png" height="131" width="200" align="left" alt="ASML"/><h1 style="position:relative; top:30px">Challenges of the Semiconductor Supply Chain</h1></div>
 <div id="menu">
 	 <ul>
 		<li><a href="home.html">Home</a></li>
@@ -44,22 +44,34 @@
 	</ul>
 </div>
 
+<div id="breadcrumbs">
+	<a href="home.html">Home</a>&rarr; 
+	<a href="tsmc.html">TSMC</a>&rarr; 
+	<a href="samsung.html">Samsung</a>&rarr; 
+	<a href="intel.html"><b>Intel</b></a>&rarr;
+	<a href="asml.html">ASML</a>&rarr;
+	<a href="restofmarket.html">The Rest of the Market</a>
+</div>
+
+<div id="main-content">
+
 
 <h4>Intel</h4>
-<br>
 
-<p>
+<div class="imageleftcaption" style="width:300px;">
 
-Intel
-Last sits Intel, the once prominent U.S. based foundry. They have had a long history of being at the head of the pack when it comes to producing the smallest, most powerful circuits. Over the past few years, they have been failing to keep pace with TSMC and Samsung. A key piece to falling behind was losing its crucial partnership with Apple with producing the processors inside of the Macbook. Not being able to meet revenue goals, an invested hedge fund 
-Figure 5: The top contract foundry companies based on market share.
-Source: Adapted from [12]
-Note: because Intel assembles, designs and packages their chips, it is not considered a contract foundry company. This makes it more difficult to discern the relative size of the companies, because Intel is more vertically integrated. This also does not take into account the type of semiconductors being used. The smaller contract foundries are invested in less advanced chips that go into cars and appliances.
-is pushing the company to &ldquo;explore strategic alternatives&ldquo;[8]. This stopped the company from progressing past the 10nm mark, generations before Samsung and TSMC. Currently, they have plans to enter the market again to be a true competitor in the fabrication space, but keeping up in the race requires hundreds of billions of dollars of commitment to keep on the frontier. This forces the corporation to rely in part on TSMC and Samsung to manufacture components in the laptops with the famous &ldquo;Intel Inside&ldquo; logo stickered on. It is still up in the air if this can be enough for the company to make the comeback, if the challenge proves too tough the United States will be forced to import all high end semiconductors. 
+<a id="Figure5">
 
+<img src="TopFoundries.jpg" width="300px" height="210px"  alt="Top contract foundry companies based on market share"/>
 
+</a>
 
+</a>Figure 5: The top contract foundry companies based on market share.<br>
+Source: Adapted from <a href="workscited.html#source12">[12]</a><br><br>
 
+</div>
+
+<p>Last sits Intel, the once prominent U.S. based foundry. They have had a long history of being at the head of the pack when it comes to producing the smallest, most powerful circuits. Over the past few years, they have been failing to keep pace with TSMC and Samsung. A key piece to falling behind was losing its crucial partnership with Apple with producing the processors inside of the Macbook. Not being able to meet revenue goals, an invested hedge fund is pushing the company to &ldquo;explore strategic alternatives&ldquo; <a href="workscited.html#source8">[8]</a>. This stopped the company from progressing past the 10nm mark, generations before Samsung and TSMC. Currently, they have plans to enter the market again to be a true competitor in the fabrication space, but keeping up in the race requires hundreds of billions of dollars of commitment to keep on the frontier. This forces the corporation to rely in part on TSMC and Samsung to manufacture components in the laptops with the famous &ldquo;Intel Inside&ldquo; logo stickered on. It is still up in the air if this can be enough for the company to make the comeback, if the challenge proves too tough the United States will be forced to import all high end semiconductors. </p>
 
 </div>
 <div id="footer"><p><h6>Copyright&copy;2023 Nick Miguel and Carlos Gonzalez. All rights reserved.</h6></p></div> 
